--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                     <!--<argLine>-->
                         <!--&#45;&#45;illegal-access=permit-->
                     <!--</argLine>-->
